# ai

./: app.py  model.pkl  model.py  pyproject.toml  requirements.txt
